syntax = "proto3";

option go_package = "github.com/bekhuli/notes-service/api/auth";

package auth;

service AuthService {
  rpc RegisterUser(RegisterRequest) returns (UserResponse);
  rpc LoginUser(LoginRequest) returns (AuthResponse);
}

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message UserResponse {
  int64 id = 1;
  string username = 2;
}

message AuthResponse {
  string token = 1;
  UserResponse user = 2;
}